name:                creatur-wains-test-utils
version:             1.2
synopsis:            Test utilities for users of creatur-wains.
description:         Test utilities for users of creatur-wains.
homepage:            https://github.com/mhwombat/creatur-wains-test-utils#readme
bug-reports:         https://github.com/mhwombat/creatur-wains-test-utils/issues
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) 2010-2017 Amy de Buitléir
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ALife.Creatur.Wain.TestUtils
  ghc-options:         -Wall
  build-depends:       base,
                       cereal,
                       creatur,
                       creatur-wains,
                       mtl,
                       QuickCheck
  default-language:    Haskell2010
