name:           creatur-wains-test-utils
version:        1.2.5
synopsis:       Test utilities for users of creatur-wains.
description:    Please see the README on GitHub at <https://github.com/mhwombat/creatur-wains-test-utils#readme>
category:       AI
homepage:       https://github.com/mhwombat/creatur-wains-test-utils#readme
bug-reports:    https://github.com/mhwombat/creatur-wains-test-utils/issues
author:         Amy de Buitléir
maintainer:     amy@nualeargais.ie
copyright:      2015-2019 Amy de Buitléir
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/mhwombat/creatur-wains-test-utils

library
  exposed-modules:
      ALife.Creatur.Wain.TestUtils
  other-modules:
      Paths_creatur_wains_test_utils
  hs-source-dirs:
      src
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , cereal >= 0.5.7 && < 0.6
    , creatur >= 5.9.27 && < 5.10
    , creatur-wains ==9.5.* || == 9.6.* || == 9.7.*
    , deepseq >= 1.4.3 && < 1.5
    , mtl >= 2.2.2 && < 2.3
  default-language: Haskell2010
