cabal-version:      2.4
name:               creatur-wains-test-utils
version:            1.2.5
synopsis:           Test utilities for users of creatur-wains.
description:
  Please see the README on GitHub at <https://github.com/mhwombat/creatur-wains-test-utils#readme>
homepage:           https://github.com/mhwombat/creatur-wains-test-utils#readme
bug-reports:        https://github.com/mhwombat/creatur-wains-test-utils/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2015-2021 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur-wains-test-utils

library
  hs-source-dirs:   src
  exposed-modules:  ALife.Creatur.Wain.TestUtils
  other-modules:    Paths_creatur_wains_test_utils
  autogen-modules:  Paths_creatur_wains_test_utils
  build-depends:
      base           >=4.7    && <5
    , cereal         >=0.5.7  && <0.6
    , creatur        >=5.9.27 && <5.10
    , creatur-wains  >=9.5    && <9.8
    , deepseq        >=1.4.3  && <1.5
    , mtl            >=2.2.2  && <2.3
    , QuickCheck
  ghc-options:      -Wall -Wunused-packages -Werror
  default-language: Haskell2010
